Fix flicker/other modal animation issues
Daisyui v5 modal animation generally looks better but the slower speed (300ms instead of 200ms) causes issues when opened over brightly colored objects (water/fertilize/prune buttons show through modal immediately during close animation). Also causes stuttery appearance on iOS sometimes when modal contains images (DeletePhotosModal etc). Speeding up to v4 speed make this unnoticable. Also changed starting scale from 95% to 90% (5% increase is too subtle at new speed) and removed slight delay before opacity fade starts.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -111,7 +111,19 @@
     @apply rounded-lg object-cover;
 }
 
-/* Fix modal filling full height on iOS safari when address bar visible */
 .modal-box {
+    /* Fix modal filling full height on iOS safari when address bar visible */
     max-height: calc(100dvh - 5em);
+
+    /* Speed up transition (fix flicker when opening over colored buttons) */
+    transition:
+        translate 0.2s ease-out,
+        scale 0.2s ease-out,
+        opacity 0.2s ease-out,
+        box-shadow 0.2s ease-out;
+
+    /* Start animation smaller (makes faster animation more noticable) */
+    .modal:not([open]) > & {
+        scale: 90%;
+    }
 }
